traefik/kubernetes-api-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: default
  name: kubernetes-api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: HostSNI(`api.${clusterdomain:=undefined}`)
    services:
    - name: kubernetes
      port: 443
      weight: 1
  tls:
    passthrough: true
